[package]
name = "rpgmad-lib"
version = "4.0.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.68.0"
description = "Library for decrypting/encrypting RPG Maker `rgss` archives."
readme = "README.md"
repository = "https://github.com/savannstm/rpgm-archive-decrypter-lib"
documentation = "https://docs.rs/rpgmad-lib"
license-file = "LICENSE.md"

[dependencies]
serde = { version = "1.0.228", optional = true }
strum_macros = "0.27.2"
thiserror = "2.0.17"

[dev-dependencies]
marshal-rs = "2.0.0"

[features]
serde = ["dep:serde"]
